--- a/Vehicle/Vehicle.csproj
+++ b/Vehicle/Vehicle.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ConsoleApplication5.Program</StartupObject>
+    <StartupObject>Vehicle.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -44,15 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
-    <Compile Include="CarTaxi.cs" />
-    <Compile Include="ICanDrive.cs" />
-    <Compile Include="Intercity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Underground.cs" />
-    <Compile Include="UrbanTransport.cs" />
-    <Compile Include="Vehicle.cs" />
+    <Compile Include="Transport\Bicycle.cs" />
+    <Compile Include="Transport\Bike.cs" />
+    <Compile Include="Transport\Bus.cs" />
+    <Compile Include="Transport\Car.cs" />
+    <Compile Include="Transport\IShipping.cs" />
+    <Compile Include="Transport\Taxi.cs" />
+    <Compile Include="Transport\Train.cs" />
+    <Compile Include="Transport\Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
